<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="delete_data"><u>Delete my account</u></string>
    <string name="save_data">Save data</string>
    <string name="help_dogs">Help dogs</string>
    <string name="login_registration">Login / registration</string>
    <string name="logout">Logout</string>

    <string name="how_to_help">You can help us:</string>
    <string name="become_volunteer">Volunteer</string>
    <string name="become_guardian">Become \na dog guardian</string>
    <string name="become_fincurator">Sponsor \na dog</string>
    <string name="make_gift">Make \na gift</string>
    <string name="make_donation">Donate</string>
    <string name="other_help">Other</string>
    <string name="card_transfer">1. Transfer to card</string>
    <string name="hungry_phone">2. Transfer to phone number</string>
    <string name="ya_wallet">3. Yandex wallet</string>
    <string name="ya_wallet_number" translatable="false">4100 1425 0115 963</string>
    <string name="hungry_phone_number" translatable="false">+7 963 767 79 57</string>
    <string name="sber_card_number" translatable="false">2202 2068 4013 9302</string>
    <string name="sber_card_name" translatable="false">(Ольга Г.)</string>

    <string name="you_have_logged_out">You have logged out</string>
    <string name="reauthentication_failed">Reauthentication failed</string>
    <string name="account_deleted">Account deleted</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="not_logged_text">You must register to add dogs to favorites</string>
    <string name="delete_account_dialog">Are you sure you want to delete your account?</string>
    <string name="delete_account_dialog_title">Account deletion</string>
    <string name="delete">Delete</string>
    <string name="enter_pass">Enter your password to confirm account deletion</string>
</resources>